--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="place_image_description">Place image</string>
     <string name="back_arrow">Navigate back to the previous screen</string>
     <string name="bookmark_icon">Bookmark the exercise for the future</string>
+    <string name="delete_button_description">Delete button</string>
 </resources>
