--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,9 @@
     <string name="back_arrow">Navigate back to the previous screen</string>
     <string name="bookmark_icon">Bookmark the exercise for the future</string>
     <string name="delete_button_description">Delete button</string>
+
+    <string name="profile_button_animation">profile_button_animation</string>
+    <string name="vocal_exercises_json">vocal_exercises.json</string>
+    <string name="app_prefs">app_prefs</string>
+    <string name="data_inserted">data_inserted</string>
 </resources>
